# malloc-protocol

./: '  .gitignore  :q  LICENSE  README.md  craco.config.js  package.json  q  tailwind.config.js  tsconfig.json
functional-tests/: test-malloc.js  test-malloc.ts
program/: Cargo.toml  solana_malloc_program.json  solana_memo_program.json
program/program/: Cargo.toml
program/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  solana_utils.rs
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  solana_utils.rs  wasm_utils.rs  wcall_handlers.rs
scripts/: create-malloc-master-account.js  create-malloc-master-account.ts  start-contract.sh
scripts/init-malloc/: create-malloc-master-account.ts
src/: App.less  App.tsx  ant-custom.less  index.css  index.tsx  manifest.json  routes.tsx
src/actions/: malloc.ts  token-swap.ts
src/components/AppBar/: index.tsx
src/components/CreateBasketModal/: index.tsx
src/components/FindBasketModal/: index.tsx
src/components/FindCallModal/: index.tsx
src/components/GraphEditorToolbar/: index.tsx
src/components/Layout/: index.tsx
src/components/NewCallModal/: index.tsx
src/components/RegisterCallModal/: index.tsx
src/config/: swap_data.json
src/constants/: labels.ts
src/contexts/: accounts.tsx  connection.tsx  diagram.tsx  malloc-class.ts  malloc.tsx  market.tsx  wallet.tsx
src/models/: account.ts  malloc.ts
src/utils/: fakeState.ts  utils.ts
src/views/: index.tsx
src/views/call-graph/: index.tsx
src/views/faucet/: index.tsx
src/web3/: solana.ts
(+3 files in other folders)
