[package]
name = "malloc"
version = "3.0.0"
description = "Solana Program Library Memo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
bincode = "1.3.1"
byteorder = "1.4.2"
hashbrown = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = "1.0.123"
serde_json = "1.0.62"
solana-program = "1.5.8"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }
thiserror = "1.0.23"

[dev-dependencies]
solana-program-test = "1.5.6"
solana-sdk = "1.5.6"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
