[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = "1.0.123"
serde_json = "1.0.62"
thiserror = "1.0.23"
solana-program = "1.5.0"
bincode = "1.3.1"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-sdk = "1.5.0"
solana-validator = "1.5.0"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
